Try to add SDL2 to autobuild, not working yet

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -62,6 +62,8 @@ BASEMAINFILES = main.o
 
 GCUMAINFILES = main-gcu.o
 
+SDL2MAINFILES = main-sdl2.o
+
 SDLMAINFILES = main-sdl.o
 
 SNDSDLFILES = snd-sdl.o
