Fix build system for SDL2 port
Looks like there were three things wrong:

1) main-sdl2.c: USE_SDL2 is defined in autoconf.h, so it must be
included (via angband.h) before "ifdef USE_SDL2".

2) configure.ac: AM_PATH_SDL2, of course, instead of AM_PATH_SDL.

3) acinclude.m4: SDL2 uses SDL.h and not SDL2.h (yes, it's strange).

--- a/configure.ac
+++ b/configure.ac
@@ -274,7 +274,7 @@ fi
 
 dnl SDL2 checking
 if test "$enable_sdl2" = "yes"; then
-	AM_PATH_SDL(2.0.0,,)
+	AM_PATH_SDL2(2.0.0,,)
 
 	if test "$SDL2_CONFIG" = "no"; then
 		with_sdl2=no
