Use cp -R instead of cp -r (#506)
The cp -r flag is deprecated.

--- a/src/Makefile.osx
+++ b/src/Makefile.osx
@@ -153,7 +153,7 @@ install: $(EXE) $(ICONFILES) $(PLIST) $(LIBFILES)
 	@cp ../lib/customize/*.prf $(APPRES)/lib/customize
 
 	# 'optionally' install sound and graphics tiles, if present
-	-cp -r ../lib/tiles/ $(APPRES)/lib/tiles
+	-cp -R ../lib/tiles/ $(APPRES)/lib/tiles
 	-rm $(APPRES)/lib/tiles/Makefile $(APPRES)/lib/tiles/*/Makefile
 	-cp ../lib/sounds/*.mp3 $(APPRES)/lib/sounds
 	-cp ../lib/sounds/sound.cfg $(APPRES)/lib/sounds
